[project]
name = "ttm-wan22"
description = "TTM (Time-to-Move) node for ComfyUI enabling motion-controlled video generation with Wan2.2 models using dual-clock denoising for independent background and object animation control."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch>=2.0.0", "numpy>=1.24.0"]

[project.urls]
Repository = "https://github.com/wallen0322/ComfyUI-TTM-WAN22"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/wallen0322/ComfyUI-TTM-WAN22/wiki"
"Bug Tracker" = "https://github.com/wallen0322/ComfyUI-TTM-WAN22/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-TTM-WAN22"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

